# diansai

./: .clang-format  .clangd  .gitignore
src/arm/: CMakeLists.txt  package.xml
src/arm/model/: arm.urdf  base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL
src/arm/rviz/: display_config.rviz
src/move_control/: CMakeLists.txt  package.xml
src/move_control/include/: cdc_trans.hpp  data_pack.h  leg_calc.hpp  robot.hpp  step.hpp
src/move_control/launch/: arm_calc_rviz2.launch.py  static_display.launch.py
src/move_control/src/: cdc_trans.cpp  leg_calc.cpp  main.cpp  robot.cpp  step.cpp  test.cpp
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/msg/: Joint.msg  JointTarget.msg
